--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
 
-  <title>Soul Hostel</title>
+  <title>Soul Hostel Natal</title>
 </head>
 
 <body>
