Feat | Inserindo Preview

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
 
+  <meta property="og:image" content="<%= BASE_URL %>logo.jpg">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Soul Hostel Natal">
+  <meta property="og:description" content="O melhor hostel de Natal/RN">
+
   <title>Soul Hostel Natal</title>
 </head>
 
