Feat | Atualizando Preview

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="<%= BASE_URL %>logo.jpg">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Soul Hostel Natal">
-  <meta property="og:description" content="O melhor hostel de Natal/RN">
+  <meta property="og:description" content="Somos o seu lar longe de casa!">
 
   <title>Soul Hostel Natal</title>
 </head>
